--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,8 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@100;200;300;400;500;600;700&family=Press+Start+2P&family=Roboto:wght@100;300;400;500;700&display=swap");
+
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   border: 0;
   font-family: "Press Start 2P", cursive;
-  user-select: none;
+  -webkit-user-select: none;
 }
+
+
