--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -24,3 +24,45 @@
     rgba(0, 0, 0, 1) 100%
   );
 }
+
+.container {
+  position: relative;
+  z-index: 3;
+  display: flex;
+  height: 100vh;
+}
+/* container lateral esquerdo */
+.container__left {
+  width: 35%;
+  min-width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+.container__left .score_box {
+  background: #fff;
+  padding: 2rem;
+  line-height: 1.2rem;
+}
+.frame {
+  border: 3px solid #000;
+  border-radius: 5px;
+}
+.container__left .card_details {
+  background: #fff;
+  padding: 1rem;
+  line-height: 1.2rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  height: 6rem;
+}
+#card-name {
+  font-size: 0.8rem;
+}
+#card-type {
+  font-size: 1rem;
+}
