added container right :sparkles:

--- a/src/styles/containers_and_frames.css
+++ b/src/styles/containers_and_frames.css
@@ -69,8 +69,8 @@
   padding: 12px;
 
   /* added */
-  opacity: 0.6;
-  filter: alpha (opacity=50);
+  /* opacity: 0.6;
+  filter: alpha (opacity=50); */
 
   /* internal border */
   box-sizing: border-box;
