--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,64 +1,65 @@
 .bg-video {
   position: absolute;
-  z-index: -2;
-  width: 100vw;
-  height: 100vh;
+  z-index: -3;
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
   overflow: hidden;
   display: flex;
+  align-items: baseline;
   justify-content: center;
 }
 .bg-video .video {
-  height: 100vh;
+  height: 100%
 }
 .bg-video::after {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
   background: linear-gradient(
-    45deg,
+    90deg,
     rgba(0, 0, 0, 1) 0%,
-    rgba(0, 0, 0, 0.4) 50%,
+    rgba(0, 0, 0, 0.5) 50%,
     rgba(0, 0, 0, 1) 100%
   );
 }
-
 .container {
   position: relative;
   z-index: 3;
   display: flex;
-  height: 100vh;
+  min-height: 100vh;
 }
-/* container lateral esquerdo */
 .container__left {
   width: 35%;
-  min-width: 200px;
+  min-width: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
 }
-.container__left .score_box {
+
+.score_box {
   background: #fff;
-  padding: 2rem;
-  line-height: 1.2rem;
+  padding: 30px;
 }
 .frame {
   border: 3px solid #000;
   border-radius: 5px;
 }
-.container__left .card_details {
+.card_details {
   background: #fff;
   padding: 1rem;
-  line-height: 1.2rem;
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
   justify-content: space-between;
-  width: 100%;
   height: 6rem;
+  width: 100%;
 }
 #card-name {
   font-size: 0.8rem;
