--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -32,8 +32,10 @@
   position: relative;
   z-index: 3;
   display: flex;
+  flex-wrap: wrap;
   min-height: 100vh;
 }
+/* container à esquerda */
 .container__left {
   width: 35%;
   min-width: 300px;
@@ -67,3 +69,57 @@
 #card-type {
   font-size: 1rem;
 }
+/* container à esquerda */
+
+/* container à direita */
+.container__right{
+  width:65%;
+}
+.card-box__container{
+  height: 100%;
+  display: flex;
+  gap:1rem;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0.3rem;
+
+}
+.card-versus__container{
+  display:flex;
+  flex-direction: column;
+  padding-top:.1rem;
+  margin-top:2rem;
+  margin-bottom:2rem;
+  /* height: 300px; */
+}
+.versus-top,.versus-bottom{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.versus-bottom{
+  margin-top:1rem;
+}
+#next-duel{
+  display:none;
+}
+.card-box{
+  width:100%;
+  height: 9rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+.card-infield{
+ width: 8rem; 
+ height: 11.2rem;
+ border-radius: 8px;
+}
+
+@media(max-width:660px){
+  .container__right{
+    width: initial;
+  }
+}
+/* container à direita */
