--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -17,7 +17,7 @@ body{
   position: relative;
 }
 html{
-  font-size:100%;
+  font-size: 100%;
   scroll-behavior: smooth;
   scroll-padding-top: 4rem;
 }
@@ -29,10 +29,11 @@ html::-webkit-scrollbar-track{
   background: inset 0 0 5px gray;
 }
 html::-webkit-scrollbar-thumb{
-  background: var(--gold);
+  background:var(--gold);
   border-radius: 5rem;
-  border:1px solid #fff;
+  border: 1px solid #fff;
 }
 html::-webkit-scrollbar-thumb:hover{
-  background: var(--gold-clear);
+  background: linear-gradient(to right,var(--gold),var(--gold-clear));
+  cursor: pointer !important;
 }
