added media :sparkles:

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -98,7 +98,7 @@
   justify-content: center;
 }
 .versus-bottom{
-  margin-top:1rem;
+  /* margin-top:1rem; */
 }
 #next-duel{
   display:none;
@@ -117,9 +117,6 @@
  border-radius: 8px;
 }
 
-@media(max-width:660px){
-  .container__right{
-    width: initial;
-  }
-}
+
+
 /* container à direita */
