--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,6 +4,7 @@
   max-width: 100%;
   width: 100%;
   height: 100%;
+  min-width:300px;
   min-height: 100vh;
   overflow: hidden;
   display: flex;
@@ -80,6 +81,7 @@
 /* container à direita */
 .container__right{
   width:65%;
+  min-width: 300px;
 }
 .card-box__container{
   height: 100%;
@@ -104,7 +106,7 @@
   justify-content: center;
 }
 .versus-bottom{
-  /* margin-top:1rem; */
+  margin-top:1rem;
 }
 #next-duel{
   display:none;
