--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -31,6 +31,9 @@
   padding-left: 35px;
   padding-right: 35px;
 }
+.rpgui-button:hover{
+  cursor: pointer;
+}
 
 /* button hover */
 .rpgui-button.hover,
