--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,7 +4,7 @@
   max-width: 100%;
   width: 100%;
   height: 100%;
-  min-width:300px;
+  min-width: 300px;
   min-height: 100vh;
   overflow: hidden;
   display: flex;
@@ -12,7 +12,7 @@
   justify-content: center;
 }
 .bg-video .video {
-  height: 100%
+  height: 100%;
 }
 .bg-video::after {
   content: "";
@@ -70,62 +70,78 @@
 #card-type {
   font-size: 1rem;
 }
-.card{
-  transition: all .3s ease-in-out;
+.card {
+  transition: all 0.3s ease-in-out;
 }
-.card:hover{
+.card:hover {
   transform: scale(1.2);
 }
 /* container à esquerda */
 
 /* container à direita */
-.container__right{
-  width:65%;
+.container__right {
+  width: 65%;
   min-width: 300px;
 }
-.card-box__container{
+.card-box__container {
   height: 100%;
   display: flex;
-  gap:1rem;
+  /* gap: 1rem; */
   flex-direction: column;
   justify-content: space-between;
   padding: 0.3rem;
-
 }
-.card-versus__container{
-  display:flex;
+.card-versus__container {
+  display: flex;
   flex-direction: column;
-  padding-top:.1rem;
-  margin-top:2rem;
-  margin-bottom:2rem;
+  /* align-items: center;
+  justify-content: center; */
+  padding-top: 0.1rem;
+  /* margin-top:5rem; */
+  /* margin-bottom:2rem; */
   /* height: 300px; */
 }
-.versus-top,.versus-bottom{
+.versus-top,
+.versus-bottom {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
+  vertical-align: middle;
 }
-.versus-bottom{
-  margin-top:1rem;
+.versus-bottom {
+  /* margin-top:1rem; */
 }
-#next-duel{
-  display:none;
+#next-duel {
+  display: none;
 }
-.card-box{
-  width:100%;
+.card-box {
+  width: 100%;
   height: 7rem;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
 }
-.card-box img:hover{
+.card-box img:hover {
   cursor: pointer;
 }
-.card-infield{
- width: 8rem; 
- height: 11.2rem;
- border-radius: 8px;
+.card-infield {
+  width: 125px;
+  height: 180px;
+  max-width: 100px; 
+  border-radius: 8px;
+}
+#player-field-card,
+#computer-field-card {
+  width: 100%;
+  height: 100%;
 }
 
 /* container à direita */
+
+/* debuggar */
+.debug {
+  /* border: 1px solid red;
+  margin: 0 0.4rem; */
+}
+/* debuggar */
