--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -106,7 +106,7 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  vertical-align: middle;
+  /* vertical-align: middle; */
 }
 .versus-bottom {
   /* margin-top:1rem; */
@@ -128,13 +128,18 @@
 .card-infield {
   width: 125px;
   height: 180px;
-  max-width: 100px; 
+  max-width: 100px;
+  /* border: 1px solid #fff; */
   border-radius: 8px;
 }
+
+
 #player-field-card,
 #computer-field-card {
   width: 100%;
   height: 100%;
+  outline: none;
+  border: none;
 }
 
 /* container à direita */
