--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -48,7 +48,11 @@
 
 .score_box {
   background: #fff;
-  padding: 30px;
+  padding: 2.4rem;
+ 
+}
+#score_points{
+  display: block;
 }
 .frame {
   border: 3px solid #000;
@@ -59,16 +63,20 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   justify-content: space-between;
-  height: 6rem;
+  /* height: 6rem; */
+  gap:1rem;
   width: 100%;
+  padding:2rem;
+  line-height: 2.2rem;
+  
 }
 #card-name {
-  font-size: 0.8rem;
+  font-size: 1.28rem;
 }
 #card-type {
-  font-size: 1rem;
+  font-size: 1.6rem;
 }
 .card {
   transition: all 0.3s ease-in-out;
@@ -129,9 +137,10 @@
 .card-infield {
   width: 125px;
   height: 180px;
-  max-width: 100px;
+  max-width: 12rem;
   /* border: 1px solid #fff; */
   border-radius: 8px;
+  
 }
 
 
