--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -1,8 +1,10 @@
 @media (max-width: 860px) {
+  html {
+    font-size: 100%;
+  }
   .container__left {
     width: 100%;
-    gap:1rem;
-
+    gap: 1rem;
   }
   .container__right {
     width: 100%;
@@ -11,10 +13,28 @@
     margin-top: 0;
     margin-bottom: 0;
   }
+  .framed{
+    display: flex;
+    gap: 0.2rem;
+    padding: 2rem;
+    margin: .5rem 0;
+  }
 }
 @media (max-width: 480px) {
   .versus-top {
     /* flex-direction: column; */
   }
-  
+  .card_details{
+    line-height: 1.2rem;
+  }
+  #score_points {
+    font-size: 0.6rem;
+  }
+  #card-name,#card-type{
+    font-size:.8rem;
+  }
+  .card-infield {
+    max-width: 8rem;
+    padding: 0 8px;
+  }
 }
