--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -54,6 +54,11 @@
 #score_points{
   display: block;
 }
+.card-image{
+  border:0;
+  outline: 0;
+  display: none;
+}
 .frame {
   border: 3px solid #000;
   border-radius: 5px;
@@ -137,7 +142,7 @@
 .card-infield {
   width: 125px;
   height: 180px;
-  max-width: 12rem;
+  max-width: 10rem;
   /* border: 1px solid #fff; */
   border-radius: 8px;
   
