--- a/src/styles/containers_and_frames.css
+++ b/src/styles/containers_and_frames.css
@@ -21,7 +21,7 @@
   border-image-width: 18px;
   border-width: 15px;
   /* padding: 12px; */
-  padding: 4rem;
+  /* padding: 4rem; */
 
   /* internal border */
   box-sizing: border-box;
