--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -15,9 +15,10 @@
   }
   .framed{
     display: flex;
-    gap: 0.2rem;
-    padding: 2rem;
-    /* margin: .5rem 0; */
+    align-items: center;
+    justify-content:space-between;
+    /* gap: 0.2rem; */
+    
   }
 }
 @media (max-width: 480px) {
