--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -48,11 +48,7 @@
 
 .score_box {
   background: #fff;
-  padding: 2.4rem;
- 
-}
-#score_points{
-  display: block;
+  padding: 30px;
 }
 .frame {
   border: 3px solid #000;
@@ -63,20 +59,16 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
+  align-items: center;
   justify-content: space-between;
-  /* height: 6rem; */
-  gap:1rem;
+  height: 6rem;
   width: 100%;
-  padding:2rem;
-  line-height: 2.2rem;
-  
 }
 #card-name {
-  font-size: 1.28rem;
+  font-size: 0.8rem;
 }
 #card-type {
-  font-size: 1.6rem;
+  font-size: 1rem;
 }
 .card {
   transition: all 0.3s ease-in-out;
@@ -137,10 +129,9 @@
 .card-infield {
   width: 125px;
   height: 180px;
-  max-width: 10rem;
+  max-width: 100px;
   /* border: 1px solid #fff; */
   border-radius: 8px;
-  
 }
 
 
