--- a/src/styles/containers_and_frames.css
+++ b/src/styles/containers_and_frames.css
@@ -20,7 +20,7 @@
   border-image-slice: 6 6 6 6;
   border-image-width: 18px;
   border-width: 15px;
-  padding: 12px;
+  /* padding: 12px; */
 
   /* internal border */
   box-sizing: border-box;
